add links url to header nav

--- a/src/templates/includes/header.jade
+++ b/src/templates/includes/header.jade
@@ -9,16 +9,16 @@ header#header
       span  
     ul
       li
-        a(href='') About
+        a(href='about.html') About
       li
-        a(href='') Services
+        a(href='services.html') Services
       li
-        a(href='') Work
+        a(href='work.html') Work
       li
-        a(href='') Team
+        a(href='team.html') Team
       li
-        a(href='') Contact
+        a(href='contact.html') Contact
       li
-        a(href='') Job
+        a(href='job.html') Job
   // #nav
 // .header
