--- a/src/templates/services.jade
+++ b/src/templates/services.jade
@@ -1,7 +1,8 @@
 doctype html
 html
   head
-      include ./includes/head.jade
+      title BIIR - learn Engineering. Services
+      include ./includes/meta.jade
   body
     .wrapper
       include ./includes/header.jade
