--- a/src/sass/states/_index.scss
+++ b/src/sass/states/_index.scss
@@ -6,7 +6,6 @@
 }
 @media only screen and (max-width: 800px), only screen and (max-device-width: 800px) {
   #nav ul.active {
-    height:340px;
-    opacity: 1;
+    height:auto;
   }
 }
