--- a/src/sass/utilities/_placeholders.scss
+++ b/src/sass/utilities/_placeholders.scss
@@ -22,3 +22,9 @@
     vertical-align: middle;
   }
 }
+%wrapper-holder {
+  max-width: $siteMaxWidth;
+  padding:0 $siteSidePaddings;
+  min-width: $siteMinWidth - $siteSidePaddings*2;
+  margin: 0 auto;
+}
