--- a/src/templates/index.jade
+++ b/src/templates/index.jade
@@ -5,8 +5,9 @@ html
       include ./includes/meta.jade
   body
     .wrapper
-      include ./includes/header.jade
-      .promo-logo-holder
-        img(src='images/main-promo-logo.png', alt="BIIR - Let's work together. Design and Engineering")
-      include ./includes/footer.jade
+        include ./includes/header.jade
+        .promo-logo-holder
+            img(src='images/main-promo-logo.png', alt="BIIR - Let's work together. Design and Engineering")
+        // .promo-logo-holder
     // .wrapper
+    include ./includes/footer.jade
