--- a/public/css/style.css
+++ b/public/css/style.css
@@ -12,6 +12,13 @@
   top: 0;
 }
 
+.wrapper, #footer .footer-holder {
+  max-width: 1250px;
+  padding: 0 10px;
+  min-width: 300px;
+  margin: 0 auto;
+}
+
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -143,6 +150,10 @@ input:focus {
   font-stretch: normal;
   unicode-range: U+0020-2666;
 }
+html, body {
+  height: 100%;
+}
+
 body {
   font: 14px Helvetica, sans-serif;
   line-height: 1.5;
@@ -385,15 +396,16 @@ dl dd {
 /* Middle
 -----------------------------------------------------------------------------*/
 .wrapper {
-  max-width: 1250px;
-  padding: 0 10px;
-  min-width: 300px;
-  margin: 0 auto;
+  min-height: 100%;
+  padding-bottom: 155px;
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 .promo-logo-holder {
   text-align: center;
-  padding: 12% 0;
+  padding: 15% 0 0;
 }
 .promo-logo-holder img {
   width: 500px;
@@ -407,14 +419,22 @@ dl dd {
 /* Footer
 -----------------------------------------------------------------------------*/
 #footer {
-  color: #fff;
-  padding: 30px 0;
-  background: #22c3f2;
-  font-size: 17px;
+  margin: -155px 0 0;
+  height: 155px;
+  padding: 0 10px;
   position: relative;
+  font-size: 17px;
 }
 #footer a {
   color: #fff;
+}
+#footer .footer-holder {
+  color: #fff;
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background: #22c3f2;
+  height: 95px;
+  position: relative;
 }
 #footer .holder {
   position: relative;
@@ -611,8 +631,7 @@ dl dd {
 
 @media only screen and (max-width: 800px), only screen and (max-device-width: 800px) {
   #nav ul.active {
-    height: 340px;
-    opacity: 1;
+    height: auto;
   }
 }
 @media only screen and (max-width: 1250px), only screen and (max-device-width: 1250px) {
@@ -700,19 +719,6 @@ dl dd {
   }
   #nav ul {
     height: 0;
-    opacity: 0;
-    -moz-transition-property: all;
-    -o-transition-property: all;
-    -webkit-transition-property: all;
-    transition-property: all;
-    -moz-transition-duration: 0.6s;
-    -o-transition-duration: 0.6s;
-    -webkit-transition-duration: 0.6s;
-    transition-duration: 0.6s;
-    -moz-transition-timing-function: ease-in;
-    -o-transition-timing-function: ease-in;
-    -webkit-transition-timing-function: ease-in;
-    transition-timing-function: ease-in;
   }
   #nav ul li {
     float: none;
