--- a/src/sass/modules/_index.scss
+++ b/src/sass/modules/_index.scss
@@ -80,14 +80,14 @@
 /* Middle
 -----------------------------------------------------------------------------*/
 .wrapper {
-  max-width: $siteMaxWidth;
-  padding:0 $siteSidePaddings;
-  min-width: $siteMinWidth - $siteSidePaddings*2;
-  margin: 0 auto;
+  min-height: 100%;
+  @extend %wrapper-holder;
+  padding-bottom: 155px;
+  @include box-sizing(border-box);
 }
 .promo-logo-holder {
   text-align: center;
-  padding:12% 0;
+  padding:15% 0 0;
   img {
     width:500px;
     vertical-align: top;
@@ -99,13 +99,22 @@
 /* Footer
 -----------------------------------------------------------------------------*/
 #footer {
-  color: #fff;
-  padding:30px 0;
-  background: $addColor;
-  font-size: 17px;
+  margin: -155px 0 0;
+  height: 155px;
+  padding:0 $siteSidePaddings;
   position: relative;
+  font-size: 17px;
   a {
     color: #fff;
+  }
+  .footer-holder {
+    @extend %wrapper-holder;
+    color: #fff;
+    padding-top: 30px;
+    padding-bottom: 30px;
+    background: $addColor;
+    height: 95px;
+    position: relative;
   }
   .holder {
     position: relative;
