--- a/src/templates/job.jade
+++ b/src/templates/job.jade
@@ -5,6 +5,7 @@ html
       include ./includes/meta.jade
   body
     .wrapper
+      - var page = 'job'
       include ./includes/header.jade
       section.middle
           h2
