--- a/src/templates/about.jade
+++ b/src/templates/about.jade
@@ -1,7 +1,7 @@
 doctype html
 html
   head
-      title BIIR - learn Engineering. About
+      title BIIR - learn Engineering | About
       include ./includes/meta.jade
   body
     .wrapper
