--- a/src/templates/work.jade
+++ b/src/templates/work.jade
@@ -1,7 +1,7 @@
 doctype html
 html
   head
-      title BIIR - learn Engineering. Work
+      title BIIR - learn Engineering | Work
       include ./includes/meta.jade
   body
     .wrapper
