--- a/src/templates/includes/meta.jade
+++ b/src/templates/includes/meta.jade
@@ -1,5 +1,6 @@
 meta(charset='utf-8')
-meta(name='description', content='')
+meta(name='description', itemprop='description',  content='BIIR is a a multidisciplinary team of engineers, project managers and designers working together as one powerful and very flexible unit.')
+meta(name='keywords', content='BIIR, engineering, engineering, consultants, konsulenter, wind energy, project managers, designers, production technology, production development, quality, ingeniør')
 meta(name='viewport', content='width=device-width, initial-scale=1.0')
 link(rel='icon', href='images/favicon.ico')
 link(href='css/style.css', media='screen, projection', rel='stylesheet', type='text/css')
