--- a/src/templates/job.jade
+++ b/src/templates/job.jade
@@ -1,7 +1,7 @@
 doctype html
 html
   head
-      title BIIR - learn Engineering | Job
+      title Job | BIIR
       include ./includes/meta.jade
   body
     .wrapper
