--- a/src/templates/team.jade
+++ b/src/templates/team.jade
@@ -1,7 +1,7 @@
 doctype html
 html
   head
-      title BIIR - learn Engineering | Team
+      title Team | BIIR
       include ./includes/meta.jade
   body
     .wrapper
