--- a/src/templates/services.jade
+++ b/src/templates/services.jade
@@ -1,7 +1,7 @@
 doctype html
 html
   head
-      title BIIR - learn Engineering | Services
+      title Services | BIIR
       include ./includes/meta.jade
   body
     .wrapper
