--- a/src/templates/about.jade
+++ b/src/templates/about.jade
@@ -1,7 +1,7 @@
 doctype html
 html
   head
-      title About | BIIR
+      title BIIR - Learn Engineering | About
       include ./includes/meta.jade
   body
     .wrapper
