--- a/src/templates/services.jade
+++ b/src/templates/services.jade
@@ -1,7 +1,7 @@
 doctype html
 html
   head
-      title Services | BIIR
+      title BIIR - Learn Engineering | Services
       include ./includes/meta.jade
   body
     .wrapper
