--- a/src/templates/index.jade
+++ b/src/templates/index.jade
@@ -1,7 +1,7 @@
 doctype html
 html
   head
-      title BIIR - learn Engineering
+      title BIIR - Learn Engineering
       include ./includes/meta.jade
   body
     .wrapper
