--- a/src/templates/job.jade
+++ b/src/templates/job.jade
@@ -1,7 +1,7 @@
 doctype html
 html
   head
-      title BIIR - Learn Engineering | Job
+      title BIIR - Lean Engineering | Job
       include ./includes/meta.jade
   body
     .wrapper
