--- a/src/templates/contact.jade
+++ b/src/templates/contact.jade
@@ -1,7 +1,7 @@
 doctype html
 html
   head
-      title BIIR - Learn Engineering | Contact
+      title BIIR - Lean Engineering | Contact
       include ./includes/meta.jade
   body
     .wrapper
