--- a/src/templates/team.jade
+++ b/src/templates/team.jade
@@ -1,7 +1,7 @@
 doctype html
 html
   head
-      title BIIR - Learn Engineering | Team
+      title BIIR - Lean Engineering | Team
       include ./includes/meta.jade
       script(type='text/javascript', src='js/team.js')
   body
