--- a/src/templates/team.jade
+++ b/src/templates/team.jade
@@ -16,7 +16,8 @@ html
               span.blue  our people
               |  are our strongest asset
           p We consist of a growing multidisciplinary group of engineers, program managers and designers working together as one powerful and very flexible unit.
-          .team-box
+          .team-box-holder
+            .team-box
               .l-holder
                   .l-150-fx
                       form(action='#', method='')
