--- a/src/sass/modules/team/_index.scss
+++ b/src/sass/modules/team/_index.scss
@@ -1,3 +1,7 @@
+.team-box-holder {
+  height: 428px;
+  overflow-y: scroll;
+}
 .team-box {
   display: table;
   padding: 20px 0 0;
@@ -32,6 +36,7 @@
     @include box-sizing(border-box);
     width: 33.333%;
     img {
+      @include box-sizing(border-box);
       display: block;
       border: 1px solid $mainColor;
       width: 100%;
