--- a/src/templates/includes/meta.jade
+++ b/src/templates/includes/meta.jade
@@ -6,3 +6,5 @@ link(rel='icon', href='images/favicon.ico')
 link(href='css/style.css', media='screen, projection', rel='stylesheet', type='text/css')
 script(type='text/javascript', src='js/jquery-1.12.0.min.js')
 script(type='text/javascript', src='js/jquery.main.js')
+
+include ./ga.jade
