Update team page

--- a/src/templates/includes/header.jade
+++ b/src/templates/includes/header.jade
@@ -15,7 +15,7 @@ header#header
       li
         a(href='work.html' class=page == 'work' ? 'active' : '') Work
       li
-        a(href='offices.html' class=page == 'team' ? 'active' : '') Offices
+        a(href='officials.html' class=page == 'officials' ? 'active' : '') Officials
       li
         a(href='contact.html' class=page == 'contact' ? 'active' : '') Contact
       li
