Update office page.

--- a/src/templates/office.jade
+++ b/src/templates/office.jade
@@ -1,12 +1,12 @@
 doctype html
 html
   head
-      title BIIR - Lean Engineering | Officials
+      title BIIR - Lean Engineering | Office
       include ./includes/meta.jade
       script(type='text/javascript', src='js/team.js')
   body
     .wrapper
-      - var page = 'officials'
+      - var page = 'office'
       script.
         var teamJSON = '{"BiirTeam":{"Employee":[{"id":"jbc","fname":"Jonas Bojer","sname":"Christensen","image":"Jonas Bojer Christensen.png","Skill":["Not set","Mechanical"]},{"id":"eei","fname":"Esben Eskerod","sname":"Ifversen","image":"Esben Eskerod Ifversen.png","Skill":["Not set","Mechanical"]},{"id":"dia","fname":"Dinara","sname":"Akzhygitova","image":"Dinara Akzhygitova.png","Skill":["Not set","Administration"]},{"id":"ts","fname":"Thomas","sname":"Sillesen","image":"Thomas Sillesen.png","Skill":["Not set","administration"]},{"id":"nls","fname":"Nicole Lajgaard","sname":"Solgaard","image":"Nicole Lajgaard Solgaard.png","Skill":["Not set","administration"]}]}}';
       include ./includes/header.jade
