--- a/src/templates/includes/header.jade
+++ b/src/templates/includes/header.jade
@@ -15,7 +15,7 @@ header#header
       li
         a(href='work.html' class=page == 'work' ? 'active' : '') Work
       li
-        a(href='officials.html' class=page == 'officials' ? 'active' : '') Officials
+        a(href='office.html' class=page == 'office' ? 'active' : '') Office
       li
         a(href='contact.html' class=page == 'contact' ? 'active' : '') Contact
       li
